crates/math-core/tests/snapshots/error_test__unsupported_command.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\asdf"
---
Error: Unknown command "\asdf".
   ╭─[ <input>:1:1 ]
   │
 1 │ \asdf
   │ ──┬──  
   │   ╰──── unknown command
───╯
